<resources>
    <string name="about">About</string>
    <string name="action_change">Change</string>
    <string name="action_skip">Skip</string>
    <string name="action_snooze">Snooze</string>
    <string name="action_stop">Stop</string>
    <string name="activateDoNotDisturb">activate DnD</string>
    <string name="activateDoNotDisturbAllowPriority">allow priority</string>
    <string name="activateDoNotDisturbSummary">Enable do-not-disturb mode while the app is active.</string>
    <string name="add_new_alarm">add new alarm</string>
    <string name="add_custom_alarm_tone">Add a custom alarm tone</string>
    <string name="add_custom_font">Add a custom typeface</string>
    <string name="alarm">Alarm</string>
    <string name="alarmName">Name of the alarm</string>
    <string name="alarmFadeIn">Increasing volume</string>
    <string name="alarmFadeInDurationSeconds">fade in duration</string>
    <string name="alarmFadeInMaxVolumePercent">maximum volume</string>
    <string name="alarmStartDate">Next alarm on</string>
    <string name="alarmStartsFrom">from</string>
    <string name="alarmUpcoming">Upcoming alarm</string>
    <string name="alarmVolume">Volume</string>
    <string name="allow_screen_off_summary">Turn the screen off during the night.</string>
    <string name="allow_screen_off">Turn screen off</string>
    <string name="always_on">Always on</string>
    <string name="alwaysOnBatteryLevel">Battery level is above</string>
    <string name="alwaysOnStartWithLockedUI">Lock user interface</string>
    <string name="alwaysOnStartWithLockedUIDesc">When starting the app automatically lock the user interface. Long press the lock icon to unlock.</string>
    <string name="ambient_noise">Ambient noise detection</string>
    <string name="ambient_noise_summary">Shall ambient noise prevent the night mode to be activated?</string>
    <string name="appearance">Appearance</string>
    <string name="app_name">Night Clock</string>
    <string name="auto_brightness">Auto brightness</string>
    <string name="autostartForNotificationsSummary">Activate the app when new notifications are shown.</string>
    <string name="autostartForNotificationsTitle">Notifications</string>
    <string name="autostart_message_disabled">Please disable screensavers (Daydream) to activate the autostart options.</string>
    <string name="autostart_timerange_label_end">End time</string>
    <string name="autostart_timerange_label_start">Start time</string>
    <string name="background">Background</string>
    <string name="background_zoomin">Zoom animation</string>
    <string name="background_zoomin_summary">Automatically zoom into background picture.</string>
    <string name="background_fadein">Cross-fade animation</string>
    <string name="background_fadein_summary">Cross-fade between background images.</string>
    <string name="background_movein">Translation animation</string>
    <string name="background_movein_direction">Slide the next background image into the screen from</string>
    <string name="background_movein_top">top</string>
    <string name="background_movein_right">right</string>
    <string name="background_movein_bottom">bottom</string>
    <string name="background_movein_left">left</string>
    <string name="background_image_filter">Imagefilter</string>
    <string name="background_image_filter_none">None</string>
    <string name="background_image_filter_grey">Grey</string>
    <string name="background_image_filter_sepia">Sepia</string>
    <string name="background_image_filter_invert">Invert</string>
    <string name="background_image_filter_contrast">Contrast</string>
    <string name="background_image_filter_sketch">Sketch</string>
    <string name="background_image_filter_blur">Blur</string>
    <string name="background_auto_accent_color">Automatic color selection</string>
    <string name="background_auto_accent_summary">Automatically select an appropriate accent color.</string>
    <string name="background_black">Black</string>
    <string name="background_exif">Show EXIF information</string>
    <string name="background_exif_summary">Show EXIF information for the current background image</string>
    <string name="background_gradient">Gradient</string>
    <string name="background_gradient_start_color">Start color</string>
    <string name="background_gradient_end_color">End color</string>
    <string name="background_image">Image</string>
    <string name="background_image_select">Select an image</string>
    <string name="background_slideshow">Slide show</string>
    <string name="background_transparent">Transparent</string>
    <string name="background_image_duration">Image change every</string>
    <string name="seconds_60">60 seconds</string>
    <string name="seconds_30">30 seconds</string>
    <string name="seconds_15">15 seconds</string>
    <string name="backgroundServiceDialogTitle">Stop background service</string>
    <string name="backgroundServiceDialogMessage">Stopping the background service will disable the autostart and standby mode. Proceed?</string>
    <string name="backgroundServiceNotificationText">Background service is running.</string>
    <string name="backgroundServiceNotificationTextLocation">Location update is in progress.</string>
    <string name="backgroundServiceNotificationTextNightMode">Night mode service is running.</string>
    <string name="battery">Battery</string>
    <string name="batteryTimeoutDescription">on battery timeout</string>
    <string name="batteryTimeoutNever">never</string>
    <string name="batteryTimeout1min">1 min</string>
    <string name="batteryTimeout2min">2 min</string>
    <string name="batteryTimeout5min">5 min</string>
    <string name="batteryTimeout10min">10 min</string>
    <string name="batteryTimeout15min">15 min</string>
    <string name="batteryTimeout30min">30 min</string>
    <string name="behaviour">Behaviour</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_night_mode">Brightness in night mode</string>
    <string name="brightness_offset">Brightness offset</string>
    <string name="brightsky_conditions_dry">dry</string>
    <string name="brightsky_conditions_fog">fog</string>
    <string name="brightsky_conditions_hail">hail</string>
    <string name="brightsky_conditions_rain">rain</string>
    <string name="brightsky_conditions_sleet">sleet</string>
    <string name="brightsky_conditions_snow">snow</string>
    <string name="brightsky_conditions_thunderstorm">thunderstorm</string>
    <string name="bug">Report a bug</string>
    <string name="bug_summary">Please let us know if something went wrong.</string>
    <string name="buy">Buy</string>
    <string name="buy_upgrade_summary">Upgrade to the professional version now.</string>
    <string name="subscribe">Subscribe</string>
    <string name="category_handle_power">… and when connected to</string>
    <string name="category_handle_power_autostart_time">Start within the time range</string>
    <string name="category_night_mode_display_management">Display management</string>
    <string name="choose_alarm_sound">Alarm tone</string>
    <string name="choose_primary_color">Accent color</string>
    <string name="choose_secondary_color">Text color</string>
    <string name="clear">clear</string>
    <string name="clock">Clock</string>
    <string name="clock_hands">Hands</string>
    <string name="clock_layout_analog">analog clock</string>
    <string name="clock_layout_calendar">digital clock with calendar</string>
    <string name="clock_layout_digital">digital clock</string>
    <string name="clock_layout_digital2">digital clock with weather</string>
    <string name="clock_layout_digital3">digital clock with weather (2)</string>
    <string name="clock_layout_elegant_analog">elegant analog clock</string>
    <string name="clock_layout_digit_analog">analog clock with digits</string>
    <string name="clock_layout_digital_flip">digital flip clock</string>
    <string name="clock_layout_anim_digit">digital animated clock</string>
    <string name="clock_layout">Layout</string>
    <string name="clock_layout_modern_analog">modern analog clock</string>
    <string name="clock_layout_mirror_text">Mirror text</string>
    <string name="clockBackgroundTransparency">Clock background transparency</string>
    <string name="colors">Colors</string>
    <string name="confirm_reset_question">Do you really want to reset all settings ?</string>
    <string name="confirm_reset_question_layout">Do you really want to reset this layout to defaults ?</string>
    <string name="confirm_reset">Reset</string>
    <string name="contribute">Contribute</string>
    <string name="contribute_beta_channel">Get beta versions</string>
    <string name="contribute_source_code">Source code</string>
    <string name="contribute_translation">Translation</string>
    <string name="country">Country</string>
    <string name="credits">Credits</string>
    <string name="credits_pull_requests">Pull requests</string>
    <string name="date_format">Date format</string>
    <string name="delete">delete</string>
    <string name="dialog_message_pending_purchase">Your purchase was not yet confirmed by Google Play.</string>
    <string name="dialog_message_already_owned">This item was already bought.</string>
    <string name="dialog_message_thank_you">Thank you very much!</string>
    <string name="dialog_title_thank_you">Thanks</string>
    <string name="digit_emphasize_quarters">Emphasize quarters</string>
    <string name="directory_background_image_select">Select a directory</string>
    <string name="decoration">Decoration</string>
    <string name="decoration_glow_effect">Glow effect</string>
    <string name="decoration_style_copper">Copper</string>
    <string name="decoration_style_gold">Gold</string>
    <string name="decoration_style_none">None</string>
    <string name="decoration_style_minute_hand">Minute hand</string>
    <string name="decoration_style_labels">Numbers</string>
    <string name="decoration_style_rust">Rust</string>
    <string name="decoration_weather_icon_size">Weather icon size</string>
    <string name="donate">Donate</string>
    <string name="doubleTapToFinishSummary">Finish the app by double tapping the screen.</string>
    <string name="doubleTapToFinishTitle">Double tap to finish</string>
    <string name="gift_for_donors">Gift for your donation</string>
    <string name="flashlight">Flashlight</string>
    <string name="forecast">Weather Forecast</string>
    <string name="frequently_asked_questions">frequently asked questions</string>
    <string name="hand_shape_arc">Arc</string>
    <string name="hand_shape_bar">Bar</string>
    <string name="hand_shape_triangle">Triangle</string>
    <string name="handle_power">Autostart</string>
    <string name="help">Help and feedback</string>
    <string name="mute_ringer">Mute ringer</string>
    <string name="night_mode">Night mode</string>
    <string name="noise_sensitivity">Microphone sensitivity</string>
    <string name="preview">Preview</string>
    <string name="radio">Radio</string>
    <string name="rate">Rate this app</string>
    <string name="rate_summary">We would like to know if you like our app</string>
    <string name="rss">RSS ticker</string>
    <string name="rss_charset">character encoding</string>
    <string name="rss_enable_summary">Enable RSS ticker</string>
    <string name="rss_tickerspeed">Ticker speed</string>
    <string name="rss_timeset">Refresh interval (minutes)</string>
    <string name="rss_text_size">Text size</string>
    <string name="show_date">Show date</string>
    <string name="style">Style</string>
    <string name="suggestions">Suggestions</string>
    <string name="suggestions_summary">Let us know if you have any suggestions upcoming versions.</string>
    <string name="timeFormat">Time format</string>
    <string name="typeface">Typeface</string>
    <string name="weather">Weather</string>
</resources>