<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/typeface_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:text="@string/typeface"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:focusable="true"
        tools:targetApi="ice_cream_sandwich" />

    <TextView
        android:id="@+id/decoration_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:focusable="true"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:text="@string/style"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        tools:targetApi="ice_cream_sandwich" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/decoration_glow_effect"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/glowRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:paddingBottom="28dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="28dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/decoration_weather_icon_size"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/weatherIconSizeFactor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="4"
        android:paddingBottom="28dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="28dp" />


</LinearLayout>
